更新京东项目

--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -25,3 +25,34 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 ### Description 网站说明
 
 1. 同样遵循简短原则 字数含空格在内不要超过120个汉字
+
+### Keywords 关键字
+
+1. 应该限制在6~8个关键词左右
+
+## 流程
+
+### 确定版心宽度
+
+### 头部
+
+1. 首先制作一个通栏带背景的盒子，确定高度。
+
+2. 嵌套一个盒子，使用版心的宽度，并且水平居中对齐。
+
+3. 插入一个可连接的图片，由于没有指定高度，故其父级元素的高度由图片撑出。
+
+### 快速导航栏
+
+1. 制作一个通栏div盒子 测量背景色 高度 border
+
+2. 在通栏盒子里嵌套一个版心样式的div
+
+3. 
+
+
+
+
+
+     
+
