更新京东项目

--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -48,7 +48,17 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 
 2. 在通栏盒子里嵌套一个版心样式的div
 
-3. 
+3. 在div里继续嵌套一个左浮动的ul和右浮动的ul 仿照网站输入文字
+
+4. 设置导航栏右侧小竖线样式 a链接样式 以及a:hover样式
+
+5. 下载icomoon图标 声明字体 调用字体 更改颜色 
+
+### 手机京东部分
+
+1. 插入二维码图片
+
+2. 解决图片掉下来问题——子绝父相
 
 
 
