--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -58,7 +58,29 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 
 1. 插入二维码图片
 
-2. 解决图片掉下来问题——子绝父相
+2. 解决图片掉下来问题——子绝父相 以及一些微调
+
+### 中间部分
+
+1. 分析结构——6个盒子组成
+
+#### logo部分
+
+1. logo使用h1 用于提高权重，便于搜索引擎优化
+
+2. 清除h1边距
+
+3. 子绝父相 logo顶上去
+
+4. 增加阴影效果
+
+#### 搜索框部分
+
+1. 确定搜索框部分大小
+
+2. 使用绝对定位
+
+
 
 
 
