更新京东项目

--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -80,6 +80,34 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 
 2. 使用绝对定位
 
+3. 搜索框下面嵌入一个input和一个button  左浮动 清除内外边距
+
+#### 购物车部分
+
+1. 准备div盒子，测量大小。绝对定位。
+
+2. 添加ico小购物车图标，设定margin-right
+
+3. 添加span盒子放“0”
+
+#### 关键词模块
+
+1. 测量大小，准备div盒子。绝对定位。
+
+2. 放a链接，设定链接字之间的margin-right;
+
+#### 小导航模块
+
+1. 测量大小，准备div盒子。绝对定位。
+
+2. li里放a。为了让字在同一行，float。设置字之间的margin。
+
+3. 
+
+
+
+
+
 
 
 
