--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -102,6 +102,25 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 
 2. li里放a。为了让字在同一行，float。设置字之间的margin。
 
+3. 小竖线样式
+
+#### 超级日部分
+
+1. 大小 定位
+
+
+### 尾部
+
+1. 确定footer大小 
+
+2. footer里面再分上下两个div盒子，嵌套版心样式
+
+#### 上面service盒子
+
+1. 里面分四个ul li；为了不设置左右边距————每个盒子的宽度为版心/4，高度为测量高度。
+
+2. 放上精灵图和文字 微调。
+
 3. 
 
 
