--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -115,14 +115,19 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 
 2. footer里面再分上下两个div盒子，嵌套版心样式
 
-#### 上面service盒子
+#### 上面service盒子模块
 
 1. 里面分四个ul li；为了不设置左右边距————每个盒子的宽度为版心/4，高度为测量高度。
 
 2. 放上精灵图和文字 微调。
 
-3. 
+3. **最重要**的一个细节是，当在service里插入完几个盒子之后，要清除浮动，因为service盒子没有给高度。
 
+#### 下面help盒子模块
+
+1. 分左浮动和有浮动两个盒子
+
+2. 
 
 
 
