更新中间模块

--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -132,6 +132,14 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 3. 放上地图，右浮动
 
 ------------------------
+### 中间部分
+
+1. 首先确定最外面大盒子的大小.里面分为四列,确定宽度，左浮动和右浮动。
+
+#### col1部分
+
+1. 确定盒子grid-col1宽度
+
 
 
 
