--- a/仿京东首页_静态/京东学习记录.md
+++ b/仿京东首页_静态/京东学习记录.md
@@ -136,9 +136,25 @@ title具有不可替代性，是搜索引擎了解网页的入口，和对网页
 
 1. 首先确定最外面大盒子的大小.里面分为四列,确定宽度，左浮动和右浮动。
 
-#### col1部分
+...... 略 因为都差不多 
 
-1. 确定盒子grid-col1宽度
+
+## 总结&遇到的问题
+
+1. 加深理解了盒子模型，无处不盒子。边距的使用，以及宽度高度剩余法。或者转换box-sizing。
+
+2. 清除浮动问题，为什么要清除浮动。主要是为了解决父级元素（没有指定高度），因子级浮动引起内部高度为0的问题。解决方法：触发BFC。
+
+3. 有时候忘了转换display模式，许多行内元素是没有宽和高的。可以转换成block或者行内块，但我更喜欢转换成行内块。
+
+4. 标签a的继承问题。想更改a的样式，尝试修改a的父盒子的样式，然后想当然a可以继承，实际操作不行。查了一下，对于a标签，浏览器有预定义的样式。而继承的样式权重又是最低的，所以要单独指定样式或者
+a {
+    color: inherit;
+}
+
+5. 结合transition和transform实现了一些过渡效果，增加了视觉体验性。
+
+6. 很多细节处理的还不是很好，很毛糙。另外，没有JS的加入，网页就是看个样子。
 
 
 
