--- a/2.仿百度搜索框/实现记录.md
+++ b/2.仿百度搜索框/实现记录.md
@@ -23,13 +23,13 @@ document.body.appendChild(script);
 
 后续只需要动态创建 li 标签，设置里面的内容，以及注意其他细节问题。
 
-1.使用 flex 布局实现搜索框的水平垂直居中。
+1.使用 flex 布局实现搜索框的水平垂直居中，鼠标悬停时，搜索按钮添加了一个 box-shadow。
 
 坑 设置完 flex 属性之后发现并没有水平垂直居中，当时设置了父盒子 height:100%,发现如果将 height 设置成具体值就可以实现居中。怀疑是设置了%高度无效，查了一下，高度百分比是相对于父盒子的，也就是 body。默认 html 和 body 是没有设置 height 的。另外，在布局中对于没有设置宽高的块状盒子，宽度默认是 100%的，高度是由里面的内容自然撑开的。
 
 2.先获取常用的 DOM 节点，避免后续频繁查询操作 DOM。
 
-3.为了避免在输入过程中频繁发送请求(如果打字速度快),对请求函数做了函数节流，调了一下间隔 130ms 差不多正好，时间再长就会有卡顿的感觉。
+3.为了避免在输入过程中频繁发送请求(如果打字速度快),对请求函数做了函数节流，调了一下间隔 130ms 差不多正好，时间再长就会有卡顿的感觉。使用了 ES6 中的箭头函数避免了 setTimeout 中 this 指向的问题。
 
 4.在回调函数中：
 
@@ -37,7 +37,7 @@ document.body.appendChild(script);
 
 - 结果处理完毕后，执行自执行匿名函数，删除创建的 script 标签;
 
-5.由于 li 是动态创建的，点击 li 标签或者点击"搜索一下"跳转百度进行搜索时，利用事件冒泡原理，进行事件委托。这里没有考虑兼容性问题：
+  5.由于 li 是动态创建的，点击 li 标签或者点击"搜索一下"跳转百度进行搜索时，利用事件冒泡原理，进行事件委托。这里没有考虑兼容性问题：
 
 ```js
 e = e || window.event;
