--- a/2.仿百度搜索框/实现记录.md
+++ b/2.仿百度搜索框/实现记录.md
@@ -34,10 +34,9 @@ document.body.appendChild(script);
 4.在回调函数中：
 
 - 每一次执行时首先要清除建议框里的内容，不然上一次的结果还会存在建议框里！截取了结果中的前五个(如果把所有结果都展示出来感觉有点丑..百度官方是展示前四个搜索建议)
+- 结果处理完毕后，执行自执行匿名函数，删除创建的 script 标签
 
-- 结果处理完毕后，执行自执行匿名函数，删除创建的 script 标签;
-
-  5.由于 li 是动态创建的，点击 li 标签或者点击"搜索一下"跳转百度进行搜索时，利用事件冒泡原理，进行事件委托。这里没有考虑兼容性问题：
+5 点击 li 标签或者点击"搜索一下"跳转百度进行搜索时，利用事件冒泡原理，进行事件委托。这里没有考虑兼容性问题：
 
 ```js
 e = e || window.event;
@@ -47,3 +46,30 @@ target = e.target || e.srcElement;
 6.除了点击事件，键盘事件--回车键以及上下键都是进行事件委托进行注册的。
 
 最终能够实现键盘上下键鼠标选择，点击“搜索一下”或回车键实现跳转搜索。
+
+---
+
+补充晚上看一点 JS 性能优化的资料：
+
+1.由于 Id 是唯一的，因此相比 className 或者 tagName，根据 Id 查找是相对快的，但是上述获取到的结果都是 HTML 集合,该集合始终与底层文档保持连接，效率低下。然而 querySelector 以及 querySelectorAll，得到的是一个 NodeList，它是一个类数组对象，不会带来 HTML 集合的问题,但是要考虑兼容性问题。另外，要避免反复查询，可以将 DOM 结点保存到变量中去。
+
+2.尽可能少的去改变 DOM 包括添加，修改，删除。改变 DOM 就会引起浏览器渲染。所以之前动态创建 li 标签并插入到 DOM 中的方式性能是不高的，由于要插入的 li 标签个数不多可能无法体会，如果 li 标签多了就会有卡顿。
+
+```js
+for (let i = 0; i < result.length; i++) {
+  // 动态创建li标签;
+  var liObj = document.createElement("li");
+  liObj.innerHTML = result[i];
+  searchResult.appendChild(liObj);
+}
+```
+
+所以改成 innerHTML 的形式：
+
+```js
+var str = "";
+for (let i = 0; i < result.length; i++) {
+  str += `<li>${result[i]}</li>`;
+}
+searchResult.innerHTML = str;
+```
